removed references to dev url

--- a/modis_restservice_qc_filter_R.ipynb
+++ b/modis_restservice_qc_filter_R.ipynb
@@ -70,7 +70,7 @@
     "library(ggplot2)\n",
     "library(scales)\n",
     "\n",
-    "endpoint <- \"https://modis-dev.ornl.gov/rst/api/v1/\""
+    "endpoint <- \"https://modis.ornl.gov/rst/api/v1/\""
    ]
   },
   {
@@ -178,7 +178,7 @@
     }
    ],
    "source": [
-    "r <- GET(\"https://modis-dev.ornl.gov/rst/api/v1/MOD11A2/dates?latitude=39.56499&longitude=-121.55527\")\n",
+    "r <- GET(\"https://modis.ornl.gov/rst/api/v1/MOD11A2/dates?latitude=39.56499&longitude=-121.55527\")\n",
     "dates <- content(r)$dates\n",
     "\n",
     "# Print the first ten MODIS dates\n",
@@ -252,7 +252,7 @@
     }
    ],
    "source": [
-    "r <- GET(\"https://modis-dev.ornl.gov/rst/api/v1/MOD11A2/subset?latitude=39.56499&longitude=-121.55527&band=LST_Day_1km&startDate=A2001001&endDate=A2001001&kmAboveBelow=2&kmLeftRight=2\", add_headers(Accept = \"text/csv\"))\n",
+    "r <- GET(\"https://modis.ornl.gov/rst/api/v1/MOD11A2/subset?latitude=39.56499&longitude=-121.55527&band=LST_Day_1km&startDate=A2001001&endDate=A2001001&kmAboveBelow=2&kmLeftRight=2\", add_headers(Accept = \"text/csv\"))\n",
     "subset <- read_csv(content(r, as=\"text\"), col_names = FALSE)\n",
     "subset"
    ]
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/plain": [
-       "{\"band\":[\"LST_Day_1km\"],\"cellsize\":[\"926.62543305583381\"],\"header\":[\"https://modis-dev.ornl.gov/rst/rst/api/v1/MOD11A2/subset?latitude=39.56499&longitude=-121.55527&band=LST_Day_1km&startDate=A2001001&endDate=A2001001&kmAboveBelow=2&kmLeftRight=2\"],\"latitude\":[39.565],\"longitude\":[-121.5553],\"ncols\":[5],\"nrows\":[5],\"scale\":[\"0.02\"],\"subset\":[{\"band\":[\"LST_Day_1km\"],\"data\":[[14341],[14349],[14366],[14391],[14404],[14360],[14354],[14363],[14351],[14344],[14328],[14299],[14270],[14374],[14396],[14285],[14294],[14293],[14375],[14364],[14353],[14301],[14271],[14350],[14270]],\"modis_date\":[\"A2001001\"],\"proc_date\":[\"2015111234608\"],\"tile\":[\"h08v05\"]}],\"units\":[\"Kelvin\"],\"xllcorner\":[\"-10421756.18\"],\"yllcorner\":[\"4396837.72\"]} "
+       "{\"band\":[\"LST_Day_1km\"],\"cellsize\":[\"926.62543305583381\"],\"header\":[\"https://modis.ornl.gov/rst/rst/api/v1/MOD11A2/subset?latitude=39.56499&longitude=-121.55527&band=LST_Day_1km&startDate=A2001001&endDate=A2001001&kmAboveBelow=2&kmLeftRight=2\"],\"latitude\":[39.565],\"longitude\":[-121.5553],\"ncols\":[5],\"nrows\":[5],\"scale\":[\"0.02\"],\"subset\":[{\"band\":[\"LST_Day_1km\"],\"data\":[[14341],[14349],[14366],[14391],[14404],[14360],[14354],[14363],[14351],[14344],[14328],[14299],[14270],[14374],[14396],[14285],[14294],[14293],[14375],[14364],[14353],[14301],[14271],[14350],[14270]],\"modis_date\":[\"A2001001\"],\"proc_date\":[\"2015111234608\"],\"tile\":[\"h08v05\"]}],\"units\":[\"Kelvin\"],\"xllcorner\":[\"-10421756.18\"],\"yllcorner\":[\"4396837.72\"]} "
       ]
      },
      "metadata": {},
@@ -289,7 +289,7 @@
     }
    ],
    "source": [
-    "r <- GET(\"https://modis-dev.ornl.gov/rst/api/v1/MOD11A2/subset?latitude=39.56499&longitude=-121.55527&band=LST_Day_1km&startDate=A2001001&endDate=A2001001&kmAboveBelow=2&kmLeftRight=2\")\n",
+    "r <- GET(\"https://modis.ornl.gov/rst/api/v1/MOD11A2/subset?latitude=39.56499&longitude=-121.55527&band=LST_Day_1km&startDate=A2001001&endDate=A2001001&kmAboveBelow=2&kmLeftRight=2\")\n",
     "toJSON(content(r))"
    ]
   },
