--- a/modis_restservice_qc_filter_R.ipynb
+++ b/modis_restservice_qc_filter_R.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "## Access the new REST-based MODIS web service and perform quality filtering using R\n",
     " \n",
+    "*Author: ORNL DAAC*  \n",
     "*Date: May 4, 2018*  \n",
     "*Contact for the ORNL DAAC: uso@daac.ornl.gov*\n",
     "\n",
@@ -43,22 +44,6 @@
    "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message:\n",
-      "\"package 'readr' was built under R version 3.4.4\"Warning message:\n",
-      "\"package 'ggplot2' was built under R version 3.4.4\"Warning message:\n",
-      "\"package 'scales' was built under R version 3.4.3\"\n",
-      "Attaching package: 'scales'\n",
-      "\n",
-      "The following object is masked from 'package:readr':\n",
-      "\n",
-      "    col_factor\n",
-      "\n"
-     ]
-    }
    ],
    "source": [
     "# For interaction with the web service\n",
