--- a/modis_restservice_qc_filter_R.ipynb
+++ b/modis_restservice_qc_filter_R.ipynb
@@ -177,7 +177,7 @@
     "### GET Request: subset\n",
     "***/api/v1/{product}/dates***\n",
     "\n",
-    "Returns the subset specified by the input parameters in either json or text/csv format. kmAboveBelow and kmLeftRightight indicates the number of kilometers above and below, left and right of the center pixel of the subset; e.g. for a 500-m product (MOD09A1) 10, 10 will result in a subset with a spatial extent covering 20.5- x 20.5-km.  \n",
+    "Returns the subset specified by the input parameters in either json or text/csv format. kmAboveBelow and kmLeftRightight indicate the number of kilometers above and below, left and right of the center pixel of the subset; e.g. for a 500-m product (MOD09A1) 10, 10 will result in a subset with a spatial extent covering 20.5- x 20.5-km.  \n",
     "\n",
     "| Parameter          | Description                                                   |\n",
     "|:-------------------|:--------------------------------------------------------------|\n",
@@ -374,7 +374,7 @@
     "    subset <- fromJSON(toJSON(content(r)))\n",
     "    lstdata <- rbind(lstdata, subset$subset)\n",
     "    \n",
-    "    # Build LST request URL\n",
+    "    # Build QC request URL\n",
     "    request_url <- requestURL(lat, lon, qc_band, dates[dt], dates[dt + 9], above_below, left_right)\n",
     "    \n",
     "    # Submit request and append to QC time series\n",
