--- a/modis_restservice_qc_filter_R.ipynb
+++ b/modis_restservice_qc_filter_R.ipynb
@@ -55,7 +55,7 @@
     "library(ggplot2)\n",
     "library(scales)\n",
     "\n",
-    "endpoint <- \"https://modis.ornl.gov/rst/api/v1/\""
+    "url <- \"https://modis.ornl.gov/rst/api/v1/\""
    ]
   },
   {
@@ -347,7 +347,7 @@
     "requestURL <- function(latitude, longitude, band, start_date, end_date, kmAB, kmLR){\n",
     "    return(\n",
     "        paste0(\n",
-    "            endpoint,prod,\"/subset?\",\n",
+    "            url,prod,\"/subset?\",\n",
     "            \"latitude=\",lat,\n",
     "            \"&longitude=\",lon,\n",
     "            \"&band=\",band,\n",
