--- a/modis_restservice_qc_filter_R.ipynb
+++ b/modis_restservice_qc_filter_R.ipynb
@@ -33,7 +33,7 @@
     "## Prerequisites: \n",
     "\n",
     "R\n",
-    "Librarys: httr, readr, jsonlite, ggplot2, scales  \n",
+    "Libraries: httr, readr, jsonlite, ggplot2, scales  \n",
     "*Note: Not all libraries required. readr enables conversation of text response into data.frame; jsonlite enables conversion of json response.*\n",
     "\n",
     "## Tutorial:"
