--- a/modis_restservice_qc_filter_R.ipynb
+++ b/modis_restservice_qc_filter_R.ipynb
@@ -348,13 +348,13 @@
     "    return(\n",
     "        paste0(\n",
     "            url,prod,\"/subset?\",\n",
-    "            \"latitude=\",lat,\n",
-    "            \"&longitude=\",lon,\n",
+    "            \"latitude=\",latitude,\n",
+    "            \"&longitude=\",longitude,\n",
     "            \"&band=\",band,\n",
     "            \"&startDate=\",start_date,\n",
     "            \"&endDate=\",end_date,\n",
-    "            \"&kmAboveBelow=\",above_below,\n",
-    "            \"&kmLeftRight=\",left_right\n",
+    "            \"&kmAboveBelow=\",kmAB,\n",
+    "            \"&kmLeftRight=\",kmLR\n",
     "        )\n",
     "    )\n",
     "}\n",
