--- a/modis_restservice_qc_filter_R.ipynb
+++ b/modis_restservice_qc_filter_R.ipynb
@@ -608,7 +608,7 @@
    "source": [
     "Now we can decide which QC filtering criteria satisfy our needs. In this example, we will filter:  \n",
     "* Pixels that were not produced due to cloud cover:  **Integer_Value %in% c(2,3)**\n",
-    "* Pixels of 'other quality' that and have an LST error > 2K:  **Bit0 == 1 & Bit1 ==0 & Bit6 == 1**\n",
+    "* Pixels of 'other quality' that have an LST error > 2K:  **Bit0 == 1 & Bit1 == 0 & Bit6 != 0**\n",
     "\n",
     "Subset the QC integer table again to include only rows that represent QC criteria for pixels that we want to filter:"
    ]
